--- a/application/layouts/scripts/detail-news.phtml
+++ b/application/layouts/scripts/detail-news.phtml
@@ -17,7 +17,7 @@
             </section>
         </article>
         <aside>
-           advertise     
+           <?php $this->displayAdvertise(10); //display 10 advertise from database?>     
         </aside>
         <footer>
             <address> address</address>
