--- a/application/layouts/scripts/not-seo.phtml
+++ b/application/layouts/scripts/not-seo.phtml
@@ -13,6 +13,7 @@
         </header>
         <section>
             <?= $this->layout()->content; ?>
+            <?php $this->layout()?>s
         </section>
         <footer>
             <address></address>
