--- a/application/layouts/scripts/not-seo.phtml
+++ b/application/layouts/scripts/not-seo.phtml
@@ -1,22 +1,34 @@
-<?php /* @var $this Zend_View */?>
+<?php /* @var $this Zend_View */ ?>
 <html>
+
+<?php echo $this->doctype() ;
+        ?>
     <head>
         <meta NAME="robots" CONTENT="noindex, nofollow">
         <meta charset="utf-8">
-        <?=$this->headTitle()?>
+        <?= $this->headTitle() ?>
+        <?= $this->headMeta('ao thoi trang cong so so mot the gioi', 'keyword') ?>
+        <?= $this->headLink() ?>
+        <?= $this->headScript() ?>
     </head>
     <body>
         <header>
             <menu>
-                <nav></nav>
+                <nav><?= $this->render('_header.phtml'); ?></nav>
             </menu>
         </header>
         <section>
             <?= $this->layout()->content; ?>
-            <?php $this->layout()?>s
         </section>
+        <section>
+        </section>
+        <nav>
+            <?=$this->partial('_paginator.phtml')?>
+        </nav>
         <footer>
-            <address></address>
+            <?php
+            echo $this->partial('_footer.phtml');
+            ?>
         </footer>
     </body>
 </html>
